# android-sensors

./: Cargo.toml  README.md
android-sensors/: Cargo.toml
android-sensors-sys/: Cargo.toml  bindings.sh  wrapper.h
android-sensors-sys/src/: lib.rs  logging.rs  looper.rs  sensors.rs
android-sensors/src/: lib.rs  looper.rs  manager.rs  sensor.rs  sensor_queue.rs  utils.rs
